third_party/move/move-compiler-v2/tests/ability-checker/ability_violation.exp

Diagnostics:
error: cannot copy local `x` implicitly
   ┌─ tests/ability-checker/ability_violation.move:27:4
   │
27 │         (x, x);
   │          ^


Diagnostics:
error: cannot drop
   ┌─ tests/ability-checker/ability_violation.move:4:3
   │
 4 │         move_from<T>(addr);
   │         ^^^^^^^^^^^^^^^^^^
   ·
14 │         move_from_no_key<Impotent>(addr);
   │         -------------------------------- in a call inlined at this callsite

error: no key ability
   ┌─ tests/ability-checker/ability_violation.move:4:3
   │
 4 │         move_from<T>(addr);
   │         ^^^^^^^^^^^^^^^^^^
   ·
14 │         move_from_no_key<Impotent>(addr);
   │         -------------------------------- in a call inlined at this callsite

error: cannot drop
   ┌─ tests/ability-checker/ability_violation.move:15:3
   │
15 │         move_from<S<Impotent>>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no key ability
   ┌─ tests/ability-checker/ability_violation.move:15:3
   │
15 │         move_from<S<Impotent>>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no key ability
   ┌─ tests/ability-checker/ability_violation.move:16:3
   │
16 │         borrow_global_mut<Impotent>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no key ability
   ┌─ tests/ability-checker/ability_violation.move:17:3
   │
17 │         borrow_global<Impotent>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no key ability
   ┌─ tests/ability-checker/ability_violation.move:18:3
   │
18 │         exists<Impotent>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^

error: no key ability
   ┌─ tests/ability-checker/ability_violation.move:22:3
   │
22 │         move_to(signer, Impotent {})
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot copy
   ┌─ tests/ability-checker/ability_violation.move:27:4
   │
27 │         (x, x);
   │          ^

error: cannot drop
   ┌─ tests/ability-checker/ability_violation.move:27:4
   │
27 │         (x, x);
   │          ^

error: cannot drop
   ┌─ tests/ability-checker/ability_violation.move:27:7
   │
27 │         (x, x);
   │             ^
